bindings/c/SpecUtils_c.h

typedef struct SpecUtils_SpecFile SpecUtils_SpecFile;
typedef struct SpecUtils_Measurement SpecUtils_Measurement;
DLLEXPORT SpecUtils_SpecFile * CALLINGCONVENTION
SpecUtils_SpecFile_create();
DLLEXPORT SpecUtils_SpecFile * CALLINGCONVENTION
SpecUtils_SpecFile_clone( const SpecUtils_SpecFile * const instance );
DLLEXPORT void CALLINGCONVENTION 
SpecUtils_SpecFile_destroy( SpecUtils_SpecFile *instance );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_SpecFile_set_equal( SpecUtils_SpecFile *lhs, const SpecUtils_SpecFile *rhs );
DLLEXPORT bool CALLINGCONVENTION 
SpecFile_load_file( SpecUtils_SpecFile *instance,
                     const char * const filename );
enum SpecUtils_ParserType
{
  SpecUtils_Parser_N42_2006, SpecUtils_Parser_N42_2012, SpecUtils_Parser_Spc,
  SpecUtils_Parser_Exploranium, SpecUtils_Parser_Pcf, SpecUtils_Parser_Chn, 
  SpecUtils_Parser_SpeIaea, SpecUtils_Parser_TxtOrCsv, SpecUtils_Parser_Cnf,
  SpecUtils_Parser_TracsMps, SpecUtils_Parser_Aram, SpecUtils_Parser_SPMDailyFile,
  SpecUtils_Parser_AmptekMca, SpecUtils_Parser_MicroRaider, SpecUtils_Parser_RadiaCode,
  SpecUtils_Parser_SpectraLine,
  SpecUtils_Parser_OrtecListMode, SpecUtils_Parser_LsrmSpe, SpecUtils_Parser_Tka,
  SpecUtils_Parser_MultiAct, SpecUtils_Parser_Phd, SpecUtils_Parser_Lzs,
  SpecUtils_Parser_ScanDataXml, SpecUtils_Parser_Json, SpecUtils_Parser_CaenHexagonGXml,
  #if( SpecUtils_ENABLE_URI_SPECTRA )
  SpecUtils_Parser_Uri,
  #endif
  SpecUtils_Parser_Auto
};
DLLEXPORT bool CALLINGCONVENTION 
SpecFile_load_file_from_format( SpecUtils_SpecFile * const instance,
                                const char * const filename,
                               const enum SpecUtils_ParserType type );
enum SpecUtils_SaveSpectrumAsType
{
  SpecUtils_SaveAsTxt,
  SpecUtils_SaveAsCsv,
  SpecUtils_SaveAsPcf,
  SpecUtils_SaveAsN42_2006,
  SpecUtils_SaveAsN42_2012,
  SpecUtils_SaveAsChn,
  SpecUtils_SaveAsSpcBinaryInt,
  SpecUtils_SaveAsSpcBinaryFloat,
  SpecUtils_SaveAsSpcAscii,
  SpecUtils_SaveAsExploraniumGr130v0,
  SpecUtils_SaveAsExploraniumGr135v2,
  SpecUtils_SaveAsSpeIaea,
  SpecUtils_SaveAsCnf,
  SpecUtils_SaveAsTka,
  #if( SpecUtils_ENABLE_D3_CHART )
  SpecUtils_SaveAsHtmlD3,
  #endif
  #if( SpecUtils_INJA_TEMPLATES )
  SpecUtils_SaveAsTemplate,
  #endif
  #if( SpecUtils_ENABLE_URI_SPECTRA )
  SpecUtils_SaveAsUri,
  #endif
  SpecUtils_SaveAsNumTypes
};
DLLEXPORT bool CALLINGCONVENTION 
SpecUtils_write_to_file( SpecUtils_SpecFile *instance,
                           const char *filename,
                        enum SpecUtils_SaveSpectrumAsType type );
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_SpecFile_passthrough( const SpecUtils_SpecFile * const instance );
DLLEXPORT uint32_t CALLINGCONVENTION 
SpecUtils_SpecFile_number_measurements( const SpecUtils_SpecFile * const instance );
DLLEXPORT uint32_t CALLINGCONVENTION 
SpecUtils_SpecFile_number_gamma_channels( const SpecUtils_SpecFile * const instance );
DLLEXPORT const SpecUtils_Measurement* CALLINGCONVENTION
SpecUtils_SpecFile_get_measurement_by_index( const SpecUtils_SpecFile * const instance,
                                     const uint32_t index );
DLLEXPORT const SpecUtils_Measurement* CALLINGCONVENTION
SpecUtils_SpecFile_get_measurement_by_sample_det( const SpecUtils_SpecFile * const instance,
                                          const int sample_number,
                                          const char * const det_name );
DLLEXPORT uint32_t CALLINGCONVENTION
SpecUtils_SpecFile_number_detectors( const SpecUtils_SpecFile * const instance );
DLLEXPORT const char * CALLINGCONVENTION
SpecUtils_SpecFile_detector_name( const SpecUtils_SpecFile * const instance,
                                 const uint32_t index );
DLLEXPORT uint32_t CALLINGCONVENTION
SpecUtils_SpecFile_number_gamma_detectors( const SpecUtils_SpecFile * const instance );
DLLEXPORT const char * CALLINGCONVENTION
SpecUtils_SpecFile_gamma_detector_name( const SpecUtils_SpecFile * const instance,
                                   const uint32_t index );
DLLEXPORT uint32_t CALLINGCONVENTION
SpecUtils_SpecFile_number_neutron_detectors( const SpecUtils_SpecFile * const instance );
DLLEXPORT const char * CALLINGCONVENTION
SpecUtils_SpecFile_neutron_detector_name( const SpecUtils_SpecFile * const instance,
                                     const uint32_t index );
DLLEXPORT uint32_t CALLINGCONVENTION
SpecUtils_SpecFile_number_samples( const SpecUtils_SpecFile * const instance );
DLLEXPORT int CALLINGCONVENTION
SpecUtils_SpecFile_sample_number( const SpecUtils_SpecFile * const instance, const uint32_t index );
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_SpecFile_add_measurement( SpecUtils_SpecFile * instance,
                SpecUtils_Measurement *measurement,
                const bool do_cleanup );
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_SpecFile_remove_measurement( SpecUtils_SpecFile * instance,
                   const SpecUtils_Measurement * const measurement,
                   const bool do_cleanup );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_SpecFile_reset( SpecUtils_SpecFile * instance );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_SpecFile_cleanup( SpecUtils_SpecFile * instance,
                                const bool dont_change_sample_numbers,
                                const bool reorder_by_time );
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_SpecFile_modified( const SpecUtils_SpecFile * const instance );
DLLEXPORT SpecUtils_Measurement * CALLINGCONVENTION
SpecUtils_SpecFile_sum_measurements( const SpecUtils_SpecFile * const instance,
                                    const int * const sample_numbers,
                                    const uint32_t number_sample_numbers,
                                    const char ** const detector_names,
                                    const uint32_t number_detector_names );
DLLEXPORT uint32_t CALLINGCONVENTION
SpecUtils_SpecFile_memmorysize( const SpecUtils_SpecFile * const instance );
DLLEXPORT uint32_t CALLINGCONVENTION
SpecUtils_SpecFile_number_remarks( const SpecUtils_SpecFile * const instance );
DLLEXPORT const char * CALLINGCONVENTION
SpecUtils_SpecFile_remark( const SpecUtils_SpecFile * const instance, 
                          const uint32_t remark_index );
DLLEXPORT uint32_t CALLINGCONVENTION
SpecUtils_SpecFile_number_parse_warnings( const SpecUtils_SpecFile * const instance );
DLLEXPORT const char * CALLINGCONVENTION
SpecUtils_SpecFile_parse_warning( const SpecUtils_SpecFile * const instance,
                                 const uint32_t warning_index  );
DLLEXPORT float CALLINGCONVENTION
SpecUtils_SpecFile_sum_gamma_live_time( const SpecUtils_SpecFile * const instance );
DLLEXPORT float CALLINGCONVENTION
SpecUtils_SpecFile_sum_gamma_real_time( const SpecUtils_SpecFile * const instance );
DLLEXPORT double CALLINGCONVENTION
SpecUtils_SpecFile_gamma_count_sum( const SpecUtils_SpecFile * const instance );
DLLEXPORT double CALLINGCONVENTION
SpecUtils_SpecFile_neutron_counts_sum( const SpecUtils_SpecFile * const instance );
DLLEXPORT const char * CALLINGCONVENTION
SpecUtils_SpecFile_filename( const SpecUtils_SpecFile * const instance );
DLLEXPORT const char * CALLINGCONVENTION
SpecUtils_SpecFile_uuid( const SpecUtils_SpecFile * const instance );
DLLEXPORT const char * CALLINGCONVENTION
SpecUtils_SpecFile_measurement_location_name( const SpecUtils_SpecFile * const instance );
DLLEXPORT const char * CALLINGCONVENTION
SpecUtils_SpecFile_measurement_operator( const SpecUtils_SpecFile * const instance );
enum SpecUtils_DetectorType
{
  SpecUtils_Det_Exploranium, SpecUtils_Det_IdentiFinder, SpecUtils_Det_IdentiFinderNG,
  SpecUtils_Det_IdentiFinderLaBr3, SpecUtils_Det_IdentiFinderTungsten,
  SpecUtils_Det_IdentiFinderR425NaI, SpecUtils_Det_IdentiFinderR425LaBr,
  SpecUtils_Det_IdentiFinderR500NaI, SpecUtils_Det_IdentiFinderR500LaBr,
  SpecUtils_Det_IdentiFinderUnknown, SpecUtils_Det_DetectiveUnknown,
  SpecUtils_Det_DetectiveEx, SpecUtils_Det_DetectiveEx100, SpecUtils_Det_DetectiveEx200,
  SpecUtils_Det_DetectiveX, SpecUtils_Det_SAIC8, SpecUtils_Det_Falcon5000,
  SpecUtils_Det_MicroDetective, SpecUtils_Det_MicroRaider,
  SpecUtils_Det_RadiaCodeCsI10, SpecUtils_Det_RadiaCodeCsI14, SpecUtils_Det_RadiaCodeGAGG10,
  SpecUtils_Det_Raysid,
  SpecUtils_Det_Interceptor, SpecUtils_Det_RadHunterNaI,
  SpecUtils_Det_RadHunterLaBr3, SpecUtils_Det_Rsi701, SpecUtils_Det_Rsi705,
  SpecUtils_Det_AvidRsi, SpecUtils_Det_OrtecRadEagleNai, SpecUtils_Det_OrtecRadEagleCeBr2Inch,
  SpecUtils_Det_OrtecRadEagleCeBr3Inch, SpecUtils_Det_OrtecRadEagleLaBr, SpecUtils_Det_Sam940LaBr3,
  SpecUtils_Det_Sam940, SpecUtils_Det_Sam945, SpecUtils_Det_Srpm210,
  SpecUtils_Det_RIIDEyeNaI, SpecUtils_Det_RIIDEyeLaBr, SpecUtils_Det_RadSeekerNaI,
  SpecUtils_Det_RadSeekerLaBr, SpecUtils_Det_VerifinderNaI, SpecUtils_Det_VerifinderLaBr,
  SpecUtils_Det_H3D400,
  SpecUtils_Det_KromekD3S, SpecUtils_Det_KromekD5, SpecUtils_Det_KromekGR1,
  SpecUtils_Det_Fulcrum, SpecUtils_Det_Fulcrum40h, SpecUtils_Det_Sam950,
  SpecUtils_Det_Unknown
};
DLLEXPORT enum SpecUtils_DetectorType CALLINGCONVENTION
SpecUtils_SpecFile_detector_type( const SpecUtils_SpecFile * const instance );
DLLEXPORT const char * CALLINGCONVENTION
SpecUtils_SpecFile_instrument_type( const SpecUtils_SpecFile * const instance );
DLLEXPORT const char * CALLINGCONVENTION
SpecUtils_SpecFile_manufacturer( const SpecUtils_SpecFile * const instance );
DLLEXPORT const char * CALLINGCONVENTION
SpecUtils_SpecFile_instrument_model( const SpecUtils_SpecFile * const instance );
DLLEXPORT const char * CALLINGCONVENTION
SpecUtils_SpecFile_instrument_id( const SpecUtils_SpecFile * const instance );
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_SpecFile_has_gps_info( const SpecUtils_SpecFile * const instance );
DLLEXPORT double CALLINGCONVENTION
SpecUtils_SpecFile_mean_latitude( const SpecUtils_SpecFile * const instance );
DLLEXPORT double CALLINGCONVENTION
SpecUtils_SpecFile_mean_longitude( const SpecUtils_SpecFile * const instance );
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_SpecFile_contains_derived_data( const SpecUtils_SpecFile * const instance );
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_SpecFile_contains_non_derived_data( const SpecUtils_SpecFile * const instance );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_SpecFile_set_filename( SpecUtils_SpecFile *instance,
                                  const char * const filename );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_SpecFile_add_remark( SpecUtils_SpecFile *instance,
                                const char * const remark );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_SpecFile_set_uuid( SpecUtils_SpecFile *instance,
                              const char * const file_uuid );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_SpecFile_set_lane_number( SpecUtils_SpecFile *instance, const int num );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_SpecFile_set_measurement_location_name( SpecUtils_SpecFile *instance,
                                                   const char * const location_name );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_SpecFile_set_inspection( SpecUtils_SpecFile *instance,
                                    const char * const inspection_type );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_SpecFile_set_instrument_type( SpecUtils_SpecFile *instance,
                                         const char * const instrument_type );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_SpecFile_set_detector_type( SpecUtils_SpecFile *instance,
                                     const enum SpecUtils_DetectorType type );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_SpecFile_set_manufacturer( SpecUtils_SpecFile *instance,
                                      const char * const manufacturer_name );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_SpecFile_set_instrument_model( SpecUtils_SpecFile *instance,
                                          const char * const model );
DLLEXPORT void CALLINGCONVENTION
SpecUtils_SpecFile_set_instrument_id( SpecUtils_SpecFile *instance,
                                       const char * const serial_number );
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_SpecFile_change_detector_name( SpecUtils_SpecFile *instance,
                            const char * const original_name,
                            const char * const new_name );
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_SpecFile_set_measurement_live_time( SpecUtils_SpecFile *instance,
                                   const float live_time,
                                   const SpecUtils_Measurement * const measurement );
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_SpecFile_set_measurement_real_time( SpecUtils_SpecFile *instance,
                                   const float real_time,
                                   const SpecUtils_Measurement * const measurement );
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_SpecFile_set_measurement_start_time( SpecUtils_SpecFile *instance,
                                    const int64_t microseconds_since_unix_epoch,
                                    const SpecUtils_Measurement * const measurement );
enum SpecUtils_SourceType
{
  SpecUtils_SourceType_IntrinsicActivity, 
  SpecUtils_SourceType_Calibration,
  SpecUtils_SourceType_Background, 
  SpecUtils_SourceType_Foreground,
  SpecUtils_SourceType_Unknown
};
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_SpecFile_set_measurement_source_type( SpecUtils_SpecFile *instance,
                                               const enum SpecUtils_SourceType type,
                       const SpecUtils_Measurement * const measurement );