bindings/csharp/SpecUtils/NativeMethods.cs

using System.Runtime.InteropServices;

namespace SpecUtils;

internal static partial class NativeMethods
{
    private const string LibName = "libSpecUtils";
    private const CallingConvention CC = CallingConvention.Cdecl;

    // ---- SpecFile lifecycle ----

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_SpecFile_create();

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_SpecFile_clone(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_SpecFile_destroy(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_SpecFile_set_equal(IntPtr lhs, IntPtr rhs);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_SpecFile_reset(IntPtr instance);

    // ---- SpecFile parsing ----

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecFile_load_file(
        IntPtr instance,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string filename);

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecFile_load_file_from_format(
        IntPtr instance,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string filename,
        ParserType type);

    // ---- SpecFile writing ----

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_write_to_file(
        IntPtr instance,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string filename,
        SaveSpectrumAsType type);

    // ---- SpecFile properties ----

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_SpecFile_passthrough(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern uint SpecUtils_SpecFile_number_measurements(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern uint SpecUtils_SpecFile_number_gamma_channels(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_SpecFile_get_measurement_by_index(
        IntPtr instance, uint index);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_SpecFile_get_measurement_by_sample_det(
        IntPtr instance,
        int sampleNumber,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string detName);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern uint SpecUtils_SpecFile_number_detectors(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_SpecFile_detector_name(IntPtr instance, uint index);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern uint SpecUtils_SpecFile_number_gamma_detectors(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_SpecFile_gamma_detector_name(IntPtr instance, uint index);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern uint SpecUtils_SpecFile_number_neutron_detectors(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_SpecFile_neutron_detector_name(IntPtr instance, uint index);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern uint SpecUtils_SpecFile_number_samples(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern int SpecUtils_SpecFile_sample_number(IntPtr instance, uint index);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern float SpecUtils_SpecFile_sum_gamma_live_time(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern float SpecUtils_SpecFile_sum_gamma_real_time(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern double SpecUtils_SpecFile_gamma_count_sum(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern double SpecUtils_SpecFile_neutron_counts_sum(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_SpecFile_filename(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_SpecFile_uuid(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_SpecFile_measurement_location_name(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_SpecFile_measurement_operator(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern DetectorType SpecUtils_SpecFile_detector_type(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_SpecFile_instrument_type(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_SpecFile_manufacturer(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_SpecFile_instrument_model(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_SpecFile_instrument_id(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_SpecFile_has_gps_info(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern double SpecUtils_SpecFile_mean_latitude(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern double SpecUtils_SpecFile_mean_longitude(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_SpecFile_contains_derived_data(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_SpecFile_contains_non_derived_data(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_SpecFile_modified(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern uint SpecUtils_SpecFile_number_remarks(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_SpecFile_remark(IntPtr instance, uint remarkIndex);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern uint SpecUtils_SpecFile_number_parse_warnings(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_SpecFile_parse_warning(IntPtr instance, uint warningIndex);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern uint SpecUtils_SpecFile_memmorysize(IntPtr instance);

    // ---- SpecFile sum measurements ----

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_SpecFile_sum_measurements(
        IntPtr instance,
        int[] sampleNumbers, uint numSamples,
        IntPtr[] detectorNames, uint numDetectors);

    // ---- SpecFile measurement management ----

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_SpecFile_add_measurement(
        IntPtr instance, IntPtr measurement,
        [MarshalAs(UnmanagedType.U1)] bool doCleanup);

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_SpecFile_remove_measurement(
        IntPtr instance, IntPtr measurement,
        [MarshalAs(UnmanagedType.U1)] bool doCleanup);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_SpecFile_cleanup(
        IntPtr instance,
        [MarshalAs(UnmanagedType.U1)] bool dontChangeSampleNumbers,
        [MarshalAs(UnmanagedType.U1)] bool reorderByTime);

    // ---- SpecFile setters ----

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_SpecFile_set_filename(
        IntPtr instance, [MarshalAs(UnmanagedType.LPUTF8Str)] string filename);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_SpecFile_set_uuid(
        IntPtr instance, [MarshalAs(UnmanagedType.LPUTF8Str)] string uuid);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_SpecFile_add_remark(
        IntPtr instance, [MarshalAs(UnmanagedType.LPUTF8Str)] string remark);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_SpecFile_set_lane_number(IntPtr instance, int num);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_SpecFile_set_measurement_location_name(
        IntPtr instance, [MarshalAs(UnmanagedType.LPUTF8Str)] string locationName);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_SpecFile_set_inspection(
        IntPtr instance, [MarshalAs(UnmanagedType.LPUTF8Str)] string inspectionType);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_SpecFile_set_instrument_type(
        IntPtr instance, [MarshalAs(UnmanagedType.LPUTF8Str)] string instrumentType);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_SpecFile_set_detector_type(
        IntPtr instance, DetectorType type);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_SpecFile_set_manufacturer(
        IntPtr instance, [MarshalAs(UnmanagedType.LPUTF8Str)] string manufacturer);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_SpecFile_set_instrument_model(
        IntPtr instance, [MarshalAs(UnmanagedType.LPUTF8Str)] string model);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern void SpecUtils_SpecFile_set_instrument_id(
        IntPtr instance, [MarshalAs(UnmanagedType.LPUTF8Str)] string serialNumber);

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_SpecFile_change_detector_name(
        IntPtr instance,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string originalName,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string newName);

    // ---- SpecFile measurement setters ----

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_SpecFile_set_measurement_live_time(
        IntPtr instance, float liveTime, IntPtr measurement);

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_SpecFile_set_measurement_real_time(
        IntPtr instance, float realTime, IntPtr measurement);

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_SpecFile_set_measurement_start_time(
        IntPtr instance, long microsecondsSinceEpoch, IntPtr measurement);

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_SpecFile_set_measurement_source_type(
        IntPtr instance, SourceType type, IntPtr measurement);
